--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de Tarefas</title>
-    <link rel="stylesheet" href="stile.css">
+    <link rel="stylesheet" href="css/stile.css">
 </head>
 <body>
     <h1>Gerenciador de Tarefas</h1>
@@ -94,6 +94,6 @@
 
         renderTasks();
     </script>
-    <script src="JS.js"></script>
+    <script src="js/scritp.js"></script>
 </body>
 </html>
