--- a/index.html
+++ b/index.html
@@ -4,131 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de Tarefas</title>
-    <link rel="stylesheet" href="css/stile.css">
+    <!-- Adicionando Bootstrap via CDN -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/stile.css">  <!-- Seu arquivo CSS personalizado -->
 </head>
 <body>
-    <h1>Gerenciador de Tarefas</h1>
+    <div class="container">
+        <h1>Gerenciador de Tarefas</h1>
 
-    <div>
-        <button onclick="switchTheme('light')">Tema Claro</button>
-        <button onclick="switchTheme('dark')">Tema Escuro</button>
+        <div>
+            <button class="btn btn-light" onclick="switchTheme('light')">Tema Claro</button>
+            <button class="btn btn-dark" onclick="switchTheme('dark')">Tema Escuro</button>
+        </div>
+
+        <div id="taskContainer">
+            <p>Nenhuma tarefa cadastrada.</p>
+        </div>
+
+        <h2>Adicionar Nova Tarefa</h2>
+        <form id="taskForm">
+            <div class="form-group">
+                <label for="taskTitle">Título:</label>
+                <input type="text" id="taskTitle" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="taskDescription">Descrição:</label>
+                <input type="text" id="taskDescription" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="taskPriority">Prioridade:</label>
+                <select id="taskPriority" class="form-control">
+                    <option value="Alta">Alta</option>
+                    <option value="Média">Média</option>
+                    <option value="Baixa">Baixa</option>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Adicionar Tarefa</button>
+        </form>
+
+        <div id="messageContainer" style="margin-top: 10px;"></div>
     </div>
 
-    <div id="taskContainer">
-        <p>Nenhuma tarefa cadastrada.</p>
-    </div>
-    
-    <h2>Adicionar Nova Tarefa</h2>
-    <form id="taskForm">
-        <label>
-            Título: 
-            <input type="text" id="taskTitle" required>
-        </label>
-        <label>
-            Descrição: 
-            <input type="text" id="taskDescription" required>
-        </label>
-        <label>
-            Prioridade: 
-            <select id="taskPriority">
-                <option value="Alta">Alta</option>
-                <option value="Média">Média</option>
-                <option value="Baixa">Baixa</option>
-            </select>
-        </label>
-        <button type="submit">Adicionar Tarefa</button>
-    </form>
-
-    <div id="errorMessage" style="color: red; margin-top: 10px;"></div>
-
-    <script>
-        let taskList = [];
-
-        function renderTasks() {
-            const container = document.getElementById("taskContainer");
-            if (taskList.length === 0) {
-                container.innerHTML = "<p>Nenhuma tarefa cadastrada.</p>";
-                return;
-            }
-
-            let html = "<ul>";
-            taskList.forEach((task, index) => {
-                html += `
-                    <li>
-                        <strong>${task.title}</strong> - ${task.priority}<br>
-                        ${task.description || "Sem descrição"}<br>
-                        Status: ${task.completed ? "Concluída" : (task.started ? "Iniciada" : "Pendente")}<br>
-                        <button onclick="startTask(${index})" ${task.started || task.completed ? 'disabled' : ''}>Iniciar</button>
-                        <button onclick="completeTask(${index})" ${task.completed ? 'disabled' : ''}>Concluir</button>
-                        <button onclick="removeTask(${index})">Remover</button>
-                    </li>
-                `;
-            });
-            html += "</ul>";
-
-            container.innerHTML = html;
-        }
-
-        function addTask(title, description, priority) {
-            const task = {
-                title,
-                description,
-                priority,
-                completed: false,
-                started: false  // Adiciona a propriedade 'started' para controlar o estado
-            };
-            taskList.push(task);
-            renderTasks();
-        }
-
-        function startTask(index) {
-            taskList[index].started = true;  // Marca a tarefa como iniciada
-            renderTasks();
-        }
-
-        function completeTask(index) {
-            taskList[index].completed = true;  // Marca a tarefa como concluída
-            renderTasks();
-        }
-
-        function removeTask(index) {
-            taskList.splice(index, 1);  // Remove a tarefa da lista
-            renderTasks();
-        }
-
-        document.getElementById("taskForm").addEventListener("submit", function(event) {
-            event.preventDefault(); 
-            const title = document.getElementById("taskTitle").value;
-            const description = document.getElementById("taskDescription").value;
-            const priority = document.getElementById("taskPriority").value;
-
-            addTask(title, description, priority);
-
-            document.getElementById("taskTitle").value = "";
-            document.getElementById("taskDescription").value = "";
-        });
-
-        function switchTheme(theme) {
-            const validThemes = ["light", "dark"];
-            if (!validThemes.includes(theme)) {
-                console.error("Tema inválido. Escolha entre 'light' ou 'dark'.");
-                return;
-            }
-
-            document.body.className = ""; // Limpa classes antigas
-            document.body.classList.add(theme);
-
-            localStorage.setItem("selectedTheme", theme);
-            console.log(`Tema alterado para: ${theme}`);
-        }
-
-        document.addEventListener("DOMContentLoaded", () => {
-            const savedTheme = localStorage.getItem("selectedTheme") || "light";
-            switchTheme(savedTheme);
-        });
-
-        renderTasks();
-    </script>
+    <!-- Scripts do Bootstrap e do seu script JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/scritp.js"></script>
 </body>
 </html>
-
